# mtm0

./: CMakeLists.txt
ex0/part1/: part1.c
ex0/part2/: mtm_buggy.c
ex1/dry/: 2_1.c  2_2.c
ex1/set/: amount_set.c  amount_set.h  amount_set_str.c  amount_set_str.h  list.h  matamikya.c  matamikya_print.c  orders.c  orders.h  product.c  product.h
